--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -6,27 +6,26 @@
     <title>Teste de imagem de fundo</title>
     <style>
       body {
-        background-image: url("imagens/wallpaper002.jpg");
+        text-align: center;
+        margin: 20px;
+        background-image: url("imagens/wallpaper001.jpg");
       }
       div.quadrado {
-        display: inline-block;
         border: 2px solid black;
         border-radius: 10px;
-        background-color: lightgray;
         width: 300px;
         height: 300px;
+        display: inline-block;
+        background-color: lightgray;
       }
-
-      div#q1 {
-        background-color: rgb(135, 206, 235);
+      #q1 {
+        background-color: aqua;
       }
-
-      div#q2 {
-        background-image: linear-gradient(to right, yellow, green);
+      #q2 {
+        background-image: linear-gradient(to bottom, red, yellow);
       }
-
-      div#q3 {
-        background-image: url("imagens/pattern003.png");
+      #q3 {
+        background-image: url("imagens/wallpaper002.jpg");
       }
     </style>
   </head>
