Refiz as atividades

--- a/exercicios/ex022/fundo004.html
+++ b/exercicios/ex022/fundo004.html
@@ -6,14 +6,26 @@
     <title>Posicionamento</title>
     <style>
       body {
-        height: 100vh;
         margin: 0px;
-        background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
+        height: 100vh;
+        background-image: url("https://media.tenor.com/4ldXD12b62kAAAAe/neuro-sama-neuro-sama.png");
         background-size: 100px 100px;
         background-repeat: no-repeat;
-        background-position: 150px center;
+        background-position: right;
+      }
+      div.figura {
+        background-image: url("https://media.tenor.com/4ldXD12b62kAAAAe/neuro-sama-neuro-sama.png");
+        height: 100px;
+        width: 100px;
+        background-position: center;
+        background-size: cover;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <h1>Teste de posicionamento</h1>
+    <div class="figura">
+    
+    </div>
+  </body>
 </html>
