--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -6,8 +6,10 @@
     <title>Posicionamento</title>
     <style>
         body {
-            background-image: url(imagens/wallpaper003.jpg);
-            background-position: center top;
+            margin: 0px;
+            height: 100vh;
+            background-image: url("imagens/wallpaper003.jpg");
+            background-position: left bottom;
         }
     </style>
 </head>
