--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -6,11 +6,11 @@
     <title>Personalização dos fundos</title>
     <style>
       body {
-        background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
-        background-size: 100px 100px;
-        background-repeat: repeat-y;
+        background-image: url("https://media.tenor.com/4ldXD12b62kAAAAe/neuro-sama-neuro-sama.png");
+        background-size: 100px;
+        background-repeat: repeat;
       }
-    </style
+    </style>
   </head>
   <body>
     <h1>Teste de aplicação de fundo</h1>
