--- a/exercicios/ex022/fundo003.html
+++ b/exercicios/ex022/fundo003.html
@@ -6,11 +6,11 @@
     <title>Posição dos fundos</title>
     <style>
       div.bloco {
-        background-image: url("imagens/wallpaper002.jpg");
+        background-image: url("imagens/wallpaper003.jpg");
         height: 200px;
-        border: 1px solid #000;
-        margin: 10px;
+        border: 2px solid black;
         border-radius: 10px;
+        margin: 10px;
       }
 
       div#q1 {
@@ -23,7 +23,7 @@
         background-position: right bottom;
       }
       div#q4 {
-        background-position: center center;
+        background-position: center;
       }
     </style>
   </head>
