--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fundo fixo de tela</title>
+    <title>Document</title>
     <style>
       body {
         height: 100vh;
-        /* background-color: black;
+        margin: 0;
+        background-color: black;
         background-image: url("imagens/wallpaper002.jpg");
-        background-position: center center;
+        /* border: 2px solid red; */
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        background-attachment: fixed; */
-        background: blue url("imagens/wallpaper002.jpg") no-repeat center center
-          fixed;
-        background-size: cover;
       }
-
       main {
         background-color: white;
-        min-width: 500px;
-        max-width: 600px;
+        width: 400px;
         padding: 10px;
         margin: auto;
-        border: 2px solid red;
+        border: 2px solid blue;
         border-radius: 15px;
       }
     </style>
@@ -33,142 +29,16 @@
     <main>
       <h1>Teste de imagem de fundo</h1>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde
-        exercitationem porro impedit debitis aperiam provident praesentium, quod
-        perspiciatis quia eligendi rem asperiores! Officia vitae laboriosam,
-        unde accusantium quaerat a nobis?Lorem ipsum dolor sit amet, consectetur
-        adipisicing elit. Perferendis omnis officia harum sapiente cumque earum
-        dolor, expedita asperiores assumenda perspiciatis necessitatibus quas
-        vitae. Voluptates recusandae accusantium veritatis illo, earum sunt.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum
-        accusamus perferendis velit minus, ex incidunt ipsam laudantium eveniet
-        adipisci cum iste voluptas libero maiores deserunt iusto voluptates
-        voluptate nulla? Autem. Ad distinctio, nostrum quia voluptates
-        necessitatibus aliquam molestias repellat amet provident maiores harum
-        consequatur officiis tenetur impedit totam, beatae facilis dolores ipsam
-        qui assumenda tempora adipisci, similique velit. Dolore, nesciunt! Vel
-        natus modi quisquam expedita libero explicabo cum, quibusdam veritatis
-        reiciendis cupiditate distinctio minus quaerat impedit doloribus placeat
-        ea dignissimos totam consequuntur illum laudantium! Velit blanditiis
-        optio pariatur amet itaque. Harum dolore, maxime eligendi architecto
-        eaque voluptate fuga eum omnis esse modi delectus natus similique est
-        quos error rerum obcaecati explicabo possimus voluptatibus perspiciatis
-        quo quia? Qui quo possimus deleniti. Consectetur, veritatis cupiditate,
-        iure porro corrupti repellat, debitis iusto distinctio voluptatum
-        reprehenderit fugit illum ducimus amet provident. Illum doloribus
-        nostrum accusamus impedit perspiciatis, magni porro facilis fugiat, qui
-        iusto dicta? Quaerat possimus, ut nihil perferendis beatae cum, quos
-        esse officia inventore doloremque nobis, laborum architecto fugiat
-        temporibus! Quos neque deserunt est debitis rerum. Laboriosam minima in
-        ipsum error facilis atque? Itaque alias laudantium, tenetur esse maxime
-        at saepe eligendi quasi assumenda ducimus sapiente numquam corporis,
-        nihil doloremque illo expedita quo. Corrupti doloremque numquam
-        quibusdam. Optio officiis neque molestias pariatur molestiae? Aliquid
-        vel veritatis repudiandae debitis cumque, odit iste corrupti nulla
-        voluptas nisi neque commodi ipsum sint praesentium amet quod autem.
-        Sequi quam et est nam, fugiat impedit illum accusamus cupiditate. Lorem
-        ipsum dolor sit, amet consectetur adipisicing elit. Unde exercitationem
-        porro impedit debitis aperiam provident praesentium, quod perspiciatis
-        quia eligendi rem asperiores! Officia vitae laboriosam, unde accusantium
-        quaerat a nobis?Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit. Perferendis omnis officia harum sapiente cumque earum dolor,
-        expedita asperiores assumenda perspiciatis necessitatibus quas vitae.
-        Voluptates recusandae accusantium veritatis illo, earum sunt. Lorem
-        ipsum dolor sit amet consectetur, adipisicing elit. Rerum accusamus
-        perferendis velit minus, ex incidunt ipsam laudantium eveniet adipisci
-        cum iste voluptas libero maiores deserunt iusto voluptates voluptate
-        nulla? Autem. Ad distinctio, nostrum quia voluptates necessitatibus
-        aliquam molestias repellat amet provident maiores harum consequatur
-        officiis tenetur impedit totam, beatae facilis dolores ipsam qui
-        assumenda tempora adipisci, similique velit. Dolore, nesciunt! Vel natus
-        modi quisquam expedita libero explicabo cum, quibusdam veritatis
-        reiciendis cupiditate distinctio minus quaerat impedit doloribus placeat
-        ea dignissimos totam consequuntur illum laudantium! Velit blanditiis
-        optio pariatur amet itaque. Harum dolore, maxime eligendi architecto
-        eaque voluptate fuga eum omnis esse modi delectus natus similique est
-        quos error rerum obcaecati explicabo possimus voluptatibus perspiciatis
-        quo quia? Qui quo possimus deleniti. Consectetur, veritatis cupiditate,
-        iure porro corrupti repellat, debitis iusto distinctio voluptatum
-        reprehenderit fugit illum ducimus amet provident. Illum doloribus
-        nostrum accusamus impedit perspiciatis, magni porro facilis fugiat, qui
-        iusto dicta? Quaerat possimus, ut nihil perferendis beatae cum, quos
-        esse officia inventore doloremque nobis, laborum architecto fugiat
-        temporibus! Quos neque deserunt est debitis rerum. Laboriosam minima in
-        ipsum error facilis atque? Itaque alias laudantium, tenetur esse maxime
-        at saepe eligendi quasi assumenda ducimus sapiente numquam corporis,
-        nihil doloremque illo expedita quo. Corrupti doloremque numquam
-        quibusdam. Optio officiis neque molestias pariatur molestiae? Aliquid
-        vel veritatis repudiandae debitis cumque, odit iste corrupti nulla
-        voluptas nisi neque commodi ipsum sint praesentium amet quod autem.
-        Sequi quam et est nam, fugiat impedit illum accusamus cupiditate. Lorem
-        ipsum dolor sit, amet consectetur adipisicing elit. Unde exercitationem
-        porro impedit debitis aperiam provident praesentium, quod perspiciatis
-        quia eligendi rem asperiores! Officia vitae laboriosam, unde accusantium
-        quaerat a nobis?Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit. Perferendis omnis officia harum sapiente cumque earum dolor,
-        expedita asperiores assumenda perspiciatis necessitatibus quas vitae.
-        Voluptates recusandae accusantium veritatis illo, earum sunt. Lorem
-        ipsum dolor sit amet consectetur, adipisicing elit. Rerum accusamus
-        perferendis velit minus, ex incidunt ipsam laudantium eveniet adipisci
-        cum iste voluptas libero maiores deserunt iusto voluptates voluptate
-        nulla? Autem. Ad distinctio, nostrum quia voluptates necessitatibus
-        aliquam molestias repellat amet provident maiores harum consequatur
-        officiis tenetur impedit totam, beatae facilis dolores ipsam qui
-        assumenda tempora adipisci, similique velit. Dolore, nesciunt! Vel natus
-        modi quisquam expedita libero explicabo cum, quibusdam veritatis
-        reiciendis cupiditate distinctio minus quaerat impedit doloribus placeat
-        ea dignissimos totam consequuntur illum laudantium! Velit blanditiis
-        optio pariatur amet itaque. Harum dolore, maxime eligendi architecto
-        eaque voluptate fuga eum omnis esse modi delectus natus similique est
-        quos error rerum obcaecati explicabo possimus voluptatibus perspiciatis
-        quo quia? Qui quo possimus deleniti. Consectetur, veritatis cupiditate,
-        iure porro corrupti repellat, debitis iusto distinctio voluptatum
-        reprehenderit fugit illum ducimus amet provident. Illum doloribus
-        nostrum accusamus impedit perspiciatis, magni porro facilis fugiat, qui
-        iusto dicta? Quaerat possimus, ut nihil perferendis beatae cum, quos
-        esse officia inventore doloremque nobis, laborum architecto fugiat
-        temporibus! Quos neque deserunt est debitis rerum. Laboriosam minima in
-        ipsum error facilis atque? Itaque alias laudantium, tenetur esse maxime
-        at saepe eligendi quasi assumenda ducimus sapiente numquam corporis,
-        nihil doloremque illo expedita quo. Corrupti doloremque numquam
-        quibusdam. Optio officiis neque molestias pariatur molestiae? Aliquid
-        vel veritatis repudiandae debitis cumque, odit iste corrupti nulla
-        voluptas nisi neque commodi ipsum sint praesentium amet quod autem.
-        Sequi quam et est nam, fugiat impedit illum accusamus cupiditate. Lorem
-        ipsum dolor sit, amet consectetur adipisicing elit. Unde exercitationem
-        porro impedit debitis aperiam provident praesentium, quod perspiciatis
-        quia eligendi rem asperiores! Officia vitae laboriosam, unde accusantium
-        quaerat a nobis?Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit. Perferendis omnis officia harum sapiente cumque earum dolor,
-        expedita asperiores assumenda perspiciatis necessitatibus quas vitae.
-        Voluptates recusandae accusantium veritatis illo, earum sunt. Lorem
-        ipsum dolor sit amet consectetur, adipisicing elit. Rerum accusamus
-        perferendis velit minus, ex incidunt ipsam laudantium eveniet adipisci
-        cum iste voluptas libero maiores deserunt iusto voluptates voluptate
-        nulla? Autem. Ad distinctio, nostrum quia voluptates necessitatibus
-        aliquam molestias repellat amet provident maiores harum consequatur
-        officiis tenetur impedit totam, beatae facilis dolores ipsam qui
-        assumenda tempora adipisci, similique velit. Dolore, nesciunt! Vel natus
-        modi quisquam expedita libero explicabo cum, quibusdam veritatis
-        reiciendis cupiditate distinctio minus quaerat impedit doloribus placeat
-        ea dignissimos totam consequuntur illum laudantium! Velit blanditiis
-        optio pariatur amet itaque. Harum dolore, maxime eligendi architecto
-        eaque voluptate fuga eum omnis esse modi delectus natus similique est
-        quos error rerum obcaecati explicabo possimus voluptatibus perspiciatis
-        quo quia? Qui quo possimus deleniti. Consectetur, veritatis cupiditate,
-        iure porro corrupti repellat, debitis iusto distinctio voluptatum
-        reprehenderit fugit illum ducimus amet provident. Illum doloribus
-        nostrum accusamus impedit perspiciatis, magni porro facilis fugiat, qui
-        iusto dicta? Quaerat possimus, ut nihil perferendis beatae cum, quos
-        esse officia inventore doloremque nobis, laborum architecto fugiat
-        temporibus! Quos neque deserunt est debitis rerum. Laboriosam minima in
-        ipsum error facilis atque? Itaque alias laudantium, tenetur esse maxime
-        at saepe eligendi quasi assumenda ducimus sapiente numquam corporis,
-        nihil doloremque illo expedita quo. Corrupti doloremque numquam
-        quibusdam. Optio officiis neque molestias pariatur molestiae? Aliquid
-        vel veritatis repudiandae debitis cumque, odit iste corrupti nulla
-        voluptas nisi neque commodi ipsum sint praesentium amet quod autem.
-        Sequi quam et est nam, fugiat impedit illum accusamus cupiditate.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
+        laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
+        nemo nam quidem possimus voluptatem quisquam maxime perferendis
+        accusantium expedita dolor? Consequatur, dicta possimus expedita eum cum
+        nulla adipisci quasi. Suscipit, cum harum! Praesentium necessitatibus,
+        quasi voluptate officia at corrupti. Sapiente, alias? Tenetur itaque,
+        error incidunt eaque quasi delectus vero optio. Delectus possimus
+        suscipit quia quas ipsam, earum eos animi ullam ratione magnam corrupti
+        sed sunt iusto qui rem dolor aperiam iste unde numquam illo officiis cum
+        illum? Voluptates, totam consectetur!
       </p>
     </main>
   </body>
