--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Posicionamento</title>
     <style>
-        body {
-            margin: 0px;
-            height: 100vh;
-            background-image: url("imagens/wallpaper003.jpg");
-            background-position: left bottom;
-        }
+      body {
+        margin: 0px;
+        height: 100vh;
+        background-image: url("imagens/wallpaper003.jpg");
+        background-position: left bottom;
+      }
     </style>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
