--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,9 +11,12 @@
         background-color: black;
         background-image: url("imagens/wallpaper002.jpg");
         /* border: 2px solid red; */
-        background-position: center;
+        background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
+        background: white url("imagens/wallpaper002.jpg")
+          no-repeat center center fixed;
       }
       main {
         background-color: white;
@@ -29,6 +32,66 @@
     <main>
       <h1>Teste de imagem de fundo</h1>
       <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
+        laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
+        nemo nam quidem possimus voluptatem quisquam maxime perferendis
+        accusantium expedita dolor? Consequatur, dicta possimus expedita eum cum
+        nulla adipisci quasi. Suscipit, cum harum! Praesentium necessitatibus,
+        quasi voluptate officia at corrupti. Sapiente, alias? Tenetur itaque,
+        error incidunt eaque quasi delectus vero optio. Delectus possimus
+        suscipit quia quas ipsam, earum eos animi ullam ratione magnam corrupti
+        sed sunt iusto qui rem dolor aperiam iste unde numquam illo officiis cum
+        illum? Voluptates, totam consectetur!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
+        laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
+        nemo nam quidem possimus voluptatem quisquam maxime perferendis
+        accusantium expedita dolor? Consequatur, dicta possimus expedita eum cum
+        nulla adipisci quasi. Suscipit, cum harum! Praesentium necessitatibus,
+        quasi voluptate officia at corrupti. Sapiente, alias? Tenetur itaque,
+        error incidunt eaque quasi delectus vero optio. Delectus possimus
+        suscipit quia quas ipsam, earum eos animi ullam ratione magnam corrupti
+        sed sunt iusto qui rem dolor aperiam iste unde numquam illo officiis cum
+        illum? Voluptates, totam consectetur!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
+        laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
+        nemo nam quidem possimus voluptatem quisquam maxime perferendis
+        accusantium expedita dolor? Consequatur, dicta possimus expedita eum cum
+        nulla adipisci quasi. Suscipit, cum harum! Praesentium necessitatibus,
+        quasi voluptate officia at corrupti. Sapiente, alias? Tenetur itaque,
+        error incidunt eaque quasi delectus vero optio. Delectus possimus
+        suscipit quia quas ipsam, earum eos animi ullam ratione magnam corrupti
+        sed sunt iusto qui rem dolor aperiam iste unde numquam illo officiis cum
+        illum? Voluptates, totam consectetur!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
+        laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
+        nemo nam quidem possimus voluptatem quisquam maxime perferendis
+        accusantium expedita dolor? Consequatur, dicta possimus expedita eum cum
+        nulla adipisci quasi. Suscipit, cum harum! Praesentium necessitatibus,
+        quasi voluptate officia at corrupti. Sapiente, alias? Tenetur itaque,
+        error incidunt eaque quasi delectus vero optio. Delectus possimus
+        suscipit quia quas ipsam, earum eos animi ullam ratione magnam corrupti
+        sed sunt iusto qui rem dolor aperiam iste unde numquam illo officiis cum
+        illum? Voluptates, totam consectetur!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
+        laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
+        nemo nam quidem possimus voluptatem quisquam maxime perferendis
+        accusantium expedita dolor? Consequatur, dicta possimus expedita eum cum
+        nulla adipisci quasi. Suscipit, cum harum! Praesentium necessitatibus,
+        quasi voluptate officia at corrupti. Sapiente, alias? Tenetur itaque,
+        error incidunt eaque quasi delectus vero optio. Delectus possimus
+        suscipit quia quas ipsam, earum eos animi ullam ratione magnam corrupti
+        sed sunt iusto qui rem dolor aperiam iste unde numquam illo officiis cum
+        illum? Voluptates, totam consectetur!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
+        laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
+        nemo nam quidem possimus voluptatem quisquam maxime perferendis
+        accusantium expedita dolor? Consequatur, dicta possimus expedita eum cum
+        nulla adipisci quasi. Suscipit, cum harum! Praesentium necessitatibus,
+        quasi voluptate officia at corrupti. Sapiente, alias? Tenetur itaque,
+        error incidunt eaque quasi delectus vero optio. Delectus possimus
+        suscipit quia quas ipsam, earum eos animi ullam ratione magnam corrupti
+        sed sunt iusto qui rem dolor aperiam iste unde numquam illo officiis cum
+        illum? Voluptates, totam consectetur!
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem,
         laudantium. Doloribus totam maiores sed enim. Nobis, dolorum sed? Sed
         nemo nam quidem possimus voluptatem quisquam maxime perferendis
