--- a/projeto-cordel/index.html
+++ b/projeto-cordel/index.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <header>
-      Cordel Moderno Por
-      <a
-        href="https://www.recantodasletras.com.br/poesias/3186743"
-        target="_blank"
-        >Milton Duarte</a
-      >
+      <h1>Cordel Moderno <br> </h1>
+      <p>
+        Por <a
+          href="https://www.recantodasletras.com.br/poesias/3186743"
+          target="_blank"
+          >Milton Duarte</a
+        >
+      </p>
     </header>
 
     <main>
-      <section>
+      <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -29,7 +31,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -41,7 +43,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -63,7 +65,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -75,7 +77,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
