--- a/projeto-cordel/index.html
+++ b/projeto-cordel/index.html
@@ -26,7 +26,7 @@
           Da tal tecnologia <br />
           Só se fala por e-mail <br />
           Mensagem curta e fria <br />
-          Twitter e Facebook <br />
+          Twitter e Facebooa <br />
           Antes que eu caduque <br />
           Vou dizer tudo em poesia. <br />
         </p>
