--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -37,7 +37,7 @@
         <label for="imes">Período Letivo</label>
         <input type="month" name="mes" id="imes" value="2025-07" />
       </p>
-      <p><label for="idia">Dia da prova</label></p>
+      <p><label for="idia">Dia da provAa</label></p>
       <input type="date" name="dia" id="idia" />
       <p>
         <input type="submit" value="Enviar" />
