--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -34,7 +34,7 @@
         />
       </p>
       <p>
-        <label for="imes">Período Letivo</label>
+        <label for="imes">Período Letivoo</label>
         <input type="month" name="mes" id="imes" value="2025-07" />
       </p>
       <p><label for="idia">Dia da provAa</label></p>
