--- a/projeto-cordel/index.html
+++ b/projeto-cordel/index.html
@@ -22,7 +22,7 @@
     <main>
       <section class="normal">
         <p>
-          Estou ficando cansado <br />
+          Estou ficando cansad0 <br />
           Da tal tecnologia <br />
           Só se fala por e-mail <br />
           Mensagem curta e fria <br />
