--- a/desafios/d009/hardware_course.html
+++ b/desafios/d009/hardware_course.html
@@ -6,7 +6,7 @@
     <title>Hardware course</title>
   </head>
   <body>
-    <h1>Hardware Course</h1>
+    <h1>Hardware CoursE</h1>
     <iframe
       width="560"
       height="315"
@@ -17,9 +17,13 @@
       referrerpolicy="strict-origin-when-cross-origin"
       allowfullscreen
     ></iframe>
-    <a target="_blank"
+    <a
+      target="_blank"
       href="https://youtube.com/playlist?list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW&si=2gGg3RDnW9NSFZmt"
-    >See the full videos</a>
-    <a href="index.html"><img src="imagens/seta.png" alt="Go back to main page"></a>
+      >See the full videos</a
+    >
+    <a href="index.html"
+      ><img src="imagens/seta.png" alt="Go back to main page"
+    /></a>
   </body>
 </html>
