--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -21,7 +21,7 @@
         />
       </p>
       <p>
-        <label for="imedia">Médiaa</label>
+        <label for="imedia">Média</label>
         <input
           type="number"
           name="media"
