--- a/desafios/desafio001.html
+++ b/desafios/desafio001.html
@@ -6,7 +6,7 @@
     <title>Desafio 01 - Desafio das mensagens</title>
   </head>
   <body>
-    <h1>Desafio das mensagens</h1>
+    <h1>Desafio das mensagenss</h1>
     <pre>
         * Um
         ** Dois
