--- a/desafios/desafio006.html
+++ b/desafios/desafio006.html
@@ -9,7 +9,7 @@
     <h1>Tags em HTML</h1>
     <p>
       Em HTML5, podemos inserir os elementos da lista a seguir. Passe o mouse
-      sobre os termos para descobrir qual tag deverá utilizar em cada caso.
+      sobre os termos para descobrir qual taga deverá utilizar em cada caso.
     </p>
     <ul type="square">
       <li title="Use a tag &lt;p&gt;">Parágrafos</li>
