--- a/desafios/desafio006.html
+++ b/desafios/desafio006.html
@@ -14,7 +14,7 @@
     <ul type="square">
       <li title="Use a tag &lt;p&gt;">Parágrafos</li>
       <li title="Use as tags &lt;h1&gt; ... &lt;h6&gt;">Títulos</li>
-      <li title="Use a tag &lt;img&gt;">Imagens</li>
+      <li title="Use a tag &lt;img&gt;">Imagensa</li>
       <li title="Use a tag &lt;abbr&gt;">Abreviações</li>
       <li title="Use a tag &lt;code&gt;">Códigos-fonte</li>
       <li title="Use a tag &lt;ol&gt;">Listas numeradas</li>
