--- a/desafios/desafio006.html
+++ b/desafios/desafio006.html
@@ -17,7 +17,7 @@
       <li title="Use a tag &lt;img&gt;">Imagensa</li>
       <li title="Use a tag &lt;abbr&gt;">Abreviações</li>
       <li title="Use a tag &lt;code&gt;">Códigos-fonte</li>
-      <li title="Use a tag &lt;ol&gt;">Listas numeradas</li>
+      <li title="Use a tag &lt;ol&gt;">Listas numeeradas</li>
       <li title="Use a tag &lt;ul&gt;">Listas com demarcadores</li>
     </ul>
   </body>
